--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Hachi Maru Pop', cursive;
+    /* font-family: 'Hachi Maru Pop', cursive;
     font-family: 'Mochiy Pop One', sans-serif;
     font-family: 'Alex Brush', cursive;
     font-family: 'Kalam', cursive;
     font-family: 'Poppins', sans-serif;
-    font-family: 'DM Serif Display', serif;
+    font-family: 'DM Serif Display', serif; */
     color: #011a01;
     list-style: none;
     text-decoration: none;
